--- a/important-topics/projects/library-manager/index.html
+++ b/important-topics/projects/library-manager/index.html
@@ -170,6 +170,6 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- TypeScript compiled file -->
-    <script src="./1.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
